# last-ditch

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  LICENSE.md  LICENSE.txt  LastDitch  Notes.md  README.md  cmake_install.cmake  rustfmt.toml
assets/config/: blocks.ron
assets/config/interface/: block_data_map.ron  block_data_map_config.ron  block_uvs.ron  gpu_blocks.ron  render_blocks.ron
assets/config/simulation/: block_map.ron  blocks.ron
assets/shaders/: agent.wgsl  block.frag.wgsl  block.vert.wgsl  chunk.wgsl  debug.frag.wgsl  debug.vert.wgsl  entity.frag.wgsl  entity.vert.wgsl  entity.wgsl  item.frag.wgsl  item.vert.wgsl  mesh.frag.wgsl  mesh.vert.wgsl  object.vert.wgsl  person.frag.wgsl  person.vert.wgsl  population.frag.wgsl  population.vert.wgsl  structure.vert.wgsl  world.frag.wgsl  world.vert.wgsl
assets/sources/blend/: block_template.blend  door.blend  door_1_closed.blend  door_1_open.blend  door_closed.blend  door_lower_1.blend  door_open.blend  door_open1.blend  door_upper_1.blend  ladder.blend  ladder_1.blend  man.blend  man_1.blend  platform.blend  woman.blend  (+4 more)
assets/textures/: atlas.xcf  texture_atlas.xcf
cmake/: FindLibSigCXX2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  FindYamlCpp.cmake
config/: blocks.ron  structures.ron
data/scripts/: tiles.yml
ext/simple_signal/: SimpleSignal.h
ext/simplesignal/: SimpleSignal.h
include/: ConfigSystem.h  Entity.h  EntitySystem.h  FileSystem.h  Input.h  InputSystem.h  LastDitch.h  SimulationConstants.h  Time.h  TimeSystem.h  User.h
include/constants/: CameraConstants.h  MapConstants.h  TimeConstants.h  UIConstants.h
include/entity/: Entity.h  EntitySystem.h
include/events/: Event.h
include/interface/: Input.h  InputSystem.h
include/map/: Floor.h  Layer.h  Map.h  MapConstants.h  MapGenerator.h  MapSystem.h  Room.h  Tile.h  TileInfo.h
include/render/: Camera.h  CameraConstants.h  CameraSystem.h  Render.h  RenderConstants.h  RenderSystem.h
include/time/: Time.h  TimeConstants.h  TimeSystem.h
include/ui/: Button.h  Element.h  List.h  Page.h  Scalable.h  Scrollable.h  Scrollbar.h  Text.h  Texture.h  UI.h  UIConstants.h  UISystem.h  Window.h
include/utility/: AssetManager.h  ConfigSystem.h  FileSystem.h  Log.h  LogSystem.h  Logging.h  Save.h  Types.h
info/: development.md  overview.md  project.md
scripts/: count_loc.sh  loc.sh
shaders/: block.wgsl  chunk.wgsl  voxel.wgsl
src/: ConfigSystem.cpp  EntitySystem.cpp  FileSystem.cpp  Game.cpp  Game.h  InputSystem.cpp  LastDitch.cpp  LastDitch.h  SimulationConstants.cpp  TextureManager.cpp  TextureManager.h  TimeSystem.cpp  Types.h  consts.rs  interface.rs  lib.rs  macros.rs  main.cpp  main.rs  simulation.rs  tests.rs  utils.rs
src/components/: Camera.cpp  Camera.h  Chunk.h  Entity.h  Floor.h  Input.h  Layer.h  Map.h  Render.h  Room.h  Save.h  Tile.h  TileInfo.h  Time.h  User.h  Window.h
src/constants/: CameraConstants.cpp  CameraConstants.h  MapConstants.cpp  MapConstants.h  RenderConstants.cpp  RenderConstants.h  SimulationConstants.cpp  SimulationConstants.h  TimeConstants.h
src/entity/: Entity.h  EntitySystem.cpp  EntitySystem.h
src/events/: Event.h  EventSystem.cpp  EventSystem.h  Events.h  Signals.h
src/interface/: InputSystem.cpp  InputSystem.h  app.rs  asset_manager.rs  camera.rs  chunk.rs  constants.rs  consts.rs  debug.rs  debug_renderer.rs  dispatch.rs  entity_render.rs  gpu.rs  gpu_chunk.rs  gpu_context.rs  gpu_entity.rs  gui.rs  hud.rs  input.rs  interface_mode.rs  item_render.rs  mesh.rs  mesh_data.rs  mesh_optimizer.rs  mesh_render.rs  object_renderer.rs  population_render.rs  population_renderer.rs  render.rs  render_catalog.rs  renderer.rs  texture.rs  wgpu_interface.rs  wgpu_state.rs  world_render.rs  world_renderer.rs
src/map/: Floor.h  Layer.h  Map.h  MapConstants.cpp  MapGenerator.cpp  MapSystem.cpp  MapSystem.h  TileInfo.h
src/render/: Camera.cpp  Camera.h  CameraConstants.cpp  CameraSystem.cpp  CameraSystem.h  Render.h  RenderConstants.cpp  RenderSystem.cpp
src/simulation/: action.rs  actions.rs  admin.rs  agent.rs  block.rs  chunk.rs  compute.rs  config.rs  constants.rs  constructor.rs  consts.rs  dispatch.rs  graph.rs  id.rs  kind.rs  manager.rs  mode.rs  observation.rs  overseer.rs  physics.rs  population.rs  state.rs  structure.rs  supervisor.rs  time.rs  timestep.rs  timing.rs  utils.rs  viewer.rs  views.rs  world.rs
src/systems/: CameraSystem.cpp  CameraSystem.h  ConfigSystem.cpp  ConfigSystem.h  EntitySystem.cpp  EntitySystem.h  FileSystem.cpp  FileSystem.h  InputSystem.cpp  InputSystem.h  MapGenerator.cpp  MapGenerator.h  MapSystem.cpp  MapSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  TimeSystem.cpp  TimeSystem.h  UISystem.cpp  UISystem.h
src/tests/: aabb_approx_eq.rs  aabb_approx_set_eq.rs  aabb_intersection.rs  aabb_overlapping.rs  aabb_sweep.rs  graph_entrances.rs  graph_level_0.rs  graph_local_path.rs  graph_nodes.rs  grid_boundary_contact_directions.rs  grid_conversions.rs  grid_intermediate_positions.rs  grid_is_valid.rs  grid_overlapping_aabb_list.rs  grid_overlapping_aabb_vec.rs  grid_validity.rs  mod.rs  sight.rs  world_chunk_graph.rs  world_clearance.rs  world_graph.rs  world_ray_iterator.rs
src/time/: TimeConstants.cpp  TimeSystem.cpp  TimeSystem.h
src/ui/: ButtonSet.h  Scrollable.h  Scrollbar.h  UIConstants.cpp  UISystem.cpp
src/utility/: AssetManager.cpp  ConfigSystem.cpp  ConfigSystem.h  FileSystem.cpp  FileSystem.h  Log.h  LogSystem.cpp  Logging.h
src/utils/: GLCheckError.h  GLLoadShader.h  id_generator.rs  ld_math.rs  ldmath.rs  math.rs  math_ext.rs  tracer.rs  union_find.rs
tests/: aabb_approx_eq.rs  aabb_approx_set_eq.rs  aabb_intersection.rs  aabb_overlapping.rs  aabb_sweep.rs  aabb_translate.rs  grid_boundary_tests.rs  grid_conversion.rs  grid_conversion_tests.rs  grid_conversions.rs  grid_intermediate_positions.rs  grid_is_valid.rs  grid_is_valid_test.rs  grid_overlapping_aabb_list.rs  grid_tests.rs  overlapping_aabb_tests.rs  world_boundary_tests.rs  world_chunk_graph.rs  world_clearance.rs  world_connections.rs  world_graph.rs  world_tests.rs
(+789 files in other folders)
