[package]
name = "last_ditch"
version = "0.1.0"
authors = ["Michael Chapman <ecssiah@gmail.com>"]
edition = "2021"
description = "A Civilizational Garden"
repository = "https://github.com/ecssiah/last-ditch"
readme = "README.md"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11.6"
glam = "0.30.0"
noise = "0.8"
pollster = "0.4"
rand = "0.8"
rand_pcg = "0.3"
rapier3d = "=0.23.1"
rayon = "1.10.0"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
specs = "0.20.0"
tokio = { version = "1.0", features = ["full"] }
wgpu = "24.0.0"
winit = "0.30.8"
