[package]
name = "last_ditch"
version = "0.1.0"
authors = ["Michael Chapman <ecssiah@gmail.com>"]
edition = "2021"
description = "A Civilizational Garden"
repository = "https://github.com/ecssiah/last-ditch"
readme = "README.md"

[features]
default = []
profile = []

[build-dependencies]

[dependencies]
approx = "0.5"
bitflags = "2.9.4"
bytemuck = { version = "1.14", features = ["derive"] }
chrono = "0.4.42"
crossbeam = "0.8.4"
egui = "0.31.1"
egui-winit = "0.31.1"
egui-wgpu = "0.31.1"
image = "0.25.6"
inferno = "0.11"
itertools = "0.12"
log = "0.4"
nalgebra = { version = "0.33", features = ["convert-glam029"] }
obj-rs = "0.7"
once_cell = "1.21.0"
pollster = "0.4"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.10.0"
specs = "0.20.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-flame = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
triple_buffer = "8.1.1"
wgpu = "24.0.0"
winit = "0.30.8"
ultraviolet = { version = "0.10.0", features = ["int"] }
rand_chacha = "0.9.0"
